--- a/src/components/Activity/ActivityList/ActivityList.css
+++ b/src/components/Activity/ActivityList/ActivityList.css
@@ -1,9 +1,14 @@
+.activity_list_table_container {
+  overflow-x: auto;
+  max-width: 100vw;
+}
 .activities_items_table {
   background: var(--gray_light);
   border-collapse: separate;
   border-spacing: 0 10px;
   border-radius: 10px;
   padding: 15px 20px;
+  white-space: nowrap;
 }
 .activities_items_table tr td {
   /* background: red !important; */
@@ -17,8 +22,9 @@
 }
 
 .activities_items_table p,
-.activities_items_table thead label span {
-  font-size: 16px !important;
+.activities_items_table thead label span,
+.activities_items_table thead tr td h5 {
+  font-size: 16px;
 }
 
 .activities_items_table tbody label span {
