--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -689,7 +689,7 @@ button.rbc-input::-moz-focus-inner {
 }
 .rbc-toolbar .rbc-btn-group {
   position: absolute;
-  top: -102px;
+  top: -119px;
 }
 .rbc-toolbar .rbc-btn-group:first-child {
   left: 0;
@@ -697,16 +697,16 @@ button.rbc-input::-moz-focus-inner {
 .rbc-toolbar .rbc-btn-group:last-child {
   right: 0;
 }
-.rbc-toolbar .rbc-btn-group:first-child button {
-  border: 0;
-  font-family: var(--poppins);
-}
+.rbc-toolbar .rbc-btn-group:first-child button,
 .rbc-toolbar .rbc-btn-group:last-child button {
   border: 0;
   background: var(--gray_light);
   color: var(--dark_blue);
   height: 40px;
-  padding-bottom: 8px;
+  padding-bottom: 5px;
+  font-family: var(--poppins);
+  font-size: 14px;
+  transition: 0.3s linear;
 }
 .rbc-toolbar .rbc-btn-group:last-child button {
   border-left: 1px solid var(--white);
@@ -714,6 +714,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-toolbar .rbc-btn-group:last-child button:first-child {
   border-left: 0;
 }
+.rbc-toolbar .rbc-btn-group:first-child button:hover,
 .rbc-toolbar .rbc-btn-group:last-child button:hover,
 .rbc-toolbar .rbc-btn-group:last-child button.rbc-active {
   background: var(--dark_blue);
