--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 80px 0 0 258px;
+  background: var(--gray_dark);
 }
 
 /*****************************
@@ -95,12 +96,4 @@ body {
 }
 .radius-10 {
   border-radius: 10px !important;
-}
-p,
-h6 {
-  font-size: 14px;
-}
-h5 {
-  font-size: 16px;
-  color: var(--dark_blue);
 }
