--- a/src/components/Activity/Activity.css
+++ b/src/components/Activity/Activity.css
@@ -129,3 +129,10 @@
   transform: rotate(180deg);
   font-size: 18px;
 }
+
+@media (max-width: 1040px) {
+  /* .header_bottom_middle {
+    margin-left: 0;
+    margin-top: 50px;
+  } */
+}
