--- a/src/components/Activity/ActivityList/ActivityList.css
+++ b/src/components/Activity/ActivityList/ActivityList.css
@@ -11,7 +11,6 @@
   white-space: nowrap;
 }
 .activities_items_table tr td {
-  /* background: red !important; */
   padding: 10px 20px 10px 10px;
 }
 .activities_items_table tr td:first-child {
@@ -24,11 +23,11 @@
 .activities_items_table p,
 .activities_items_table thead label span,
 .activities_items_table thead tr td h5 {
-  font-size: 16px;
+  font-size: 16px !important;
 }
 
 .activities_items_table tbody label span {
-  font-size: 14px;
+  font-size: 16px !important;
   color: rgba(19, 49, 89, 0.5);
 }
 .activities_items_table tr {
