--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -76,13 +76,11 @@ button.rbc-input::-moz-focus-inner {
   text-align: center;
   vertical-align: middle;
   font-weight: bold;
-  font-size: 90%;
+  font-size: 20px;
+  font-weight: 400;
   min-height: 0;
-  border-bottom: 1px solid #ddd;
 }
-.rbc-header + .rbc-header {
-  border-left: 1px solid #ddd;
-}
+
 .rbc-rtl .rbc-header + .rbc-header {
   border-left-width: 0;
   border-right: 1px solid #ddd;
@@ -90,7 +88,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-header > a,
 .rbc-header > a:active,
 .rbc-header > a:visited {
-  color: inherit;
+  color: var(--dark_blue);
   text-decoration: none;
 }
 
@@ -136,6 +134,8 @@ button.rbc-input::-moz-focus-inner {
   flex-grow: 1;
   padding: 0 10px;
   text-align: center;
+  font-size: 20px;
+  color: var(--dark_blue);
 }
 .rbc-toolbar button {
   color: #373a3c;
@@ -309,6 +309,8 @@ button.rbc-input::-moz-focus-inner {
 .rbc-month-header {
   display: flex;
   flex-direction: row;
+  padding: 10px 0;
+  text-align: left;
 }
 
 .rbc-month-row {
@@ -327,8 +329,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-date-cell {
   flex: 1 1 0;
   min-width: 0;
-  padding-right: 5px;
-  text-align: right;
+  padding-left: 5px;
 }
 .rbc-date-cell.rbc-now {
   font-weight: bold;
@@ -338,6 +339,7 @@ button.rbc-input::-moz-focus-inner {
 .rbc-date-cell > a:visited {
   color: inherit;
   text-decoration: none;
+  font-size: 20px;
 }
 
 .rbc-row-bg {
@@ -446,7 +448,7 @@ button.rbc-input::-moz-focus-inner {
 
 .rbc-timeslot-group {
   border-bottom: 1px solid #ddd;
-  min-height: 40px;
+  min-height: 60px;
   display: flex;
   flex-flow: column nowrap;
 }
@@ -458,6 +460,7 @@ button.rbc-input::-moz-focus-inner {
 
 .rbc-label {
   padding: 0 5px;
+  font-size: 14px;
 }
 
 .rbc-day-slot {
@@ -596,7 +599,6 @@ button.rbc-input::-moz-focus-inner {
 }
 .rbc-time-view .rbc-row {
   box-sizing: border-box;
-  min-height: 20px;
 }
 
 .rbc-time-header {
@@ -643,9 +645,10 @@ button.rbc-input::-moz-focus-inner {
   flex: 1 0 0%;
   align-items: flex-start;
   width: 100%;
-  border-top: 2px solid #ddd;
+  border-top: 1px solid #ddd;
   overflow-y: auto;
   position: relative;
+  background: var(--gray_light);
 }
 .rbc-time-content > .rbc-time-gutter {
   flex: none;
@@ -680,8 +683,8 @@ button.rbc-input::-moz-focus-inner {
 .rbc-toolbar .rbc-btn-group:last-child button:last-child {
   display: none;
 }
-.rbc-toolbar .rbc-btn-group:last-child button:nth-child(3) {
-  border-radius: 0 5px 5px 0;
+.rbc-toolbar .rbc-btn-group:last-child button:first-child {
+  border-radius: 0;
 }
 
 .rbc-calendar {
@@ -689,13 +692,17 @@ button.rbc-input::-moz-focus-inner {
 }
 .rbc-toolbar .rbc-btn-group {
   position: absolute;
-  top: -119px;
+  top: -126px;
 }
 .rbc-toolbar .rbc-btn-group:first-child {
   left: 0;
 }
 .rbc-toolbar .rbc-btn-group:last-child {
   right: 0;
+  display: flex;
+  flex-direction: row-reverse;
+  border-radius: 5px;
+  overflow: hidden;
 }
 .rbc-toolbar .rbc-btn-group:first-child button,
 .rbc-toolbar .rbc-btn-group:last-child button {
@@ -709,10 +716,11 @@ button.rbc-input::-moz-focus-inner {
   transition: 0.3s linear;
 }
 .rbc-toolbar .rbc-btn-group:last-child button {
-  border-left: 1px solid var(--white);
+  border-right: 1px solid var(--white);
+  padding: 5px 10px;
 }
 .rbc-toolbar .rbc-btn-group:last-child button:first-child {
-  border-left: 0;
+  border-right: 0;
 }
 .rbc-toolbar .rbc-btn-group:first-child button:hover,
 .rbc-toolbar .rbc-btn-group:last-child button:hover,
@@ -720,22 +728,20 @@ button.rbc-input::-moz-focus-inner {
   background: var(--dark_blue);
   color: var(--white);
 }
-
-@media (max-width: 1320px) {
+#calendar__tab {
+  background: var(--gray_light);
+}
+@media (max-width: 1279px) {
   .rbc-toolbar .rbc-btn-group {
-    top: -166px;
+    top: -173px;
   }
 }
 @media (max-width: 1199px) {
   .rbc-toolbar .rbc-btn-group {
-    top: -164px;
+    top: -171px;
   }
 }
-@media (max-width: 1040px) {
-  .rbc-toolbar .rbc-btn-group {
-    top: -164px;
-  }
-}
+
 @media (max-width: 992px) {
   .rbc-toolbar .rbc-btn-group:first-child {
     top: -224px;
